<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home_title"

        />
    <item
        android:id="@+id/myJournalsFragment"
        android:icon="@drawable/ic_baseline_directions_walk_24"
        android:title="@string/nav_journals"
        />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/nav_profile"
        />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/nav_notification"
        />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_setting"
        />

</menu>