<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="96dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/reg_username"
        android:drawablePadding="32dp"

        android:autofillHints="username"
        android:minHeight="48dp"
        android:textSize="12sp"
        android:textColorHint="#546E7A"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ed_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_name"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/email_hint"
        android:drawablePadding="32dp"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:textSize="12sp"
        android:textColorHint="#546E7A"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:inputType="textEmailAddress" />
    <RadioGroup
        android:id="@+id/rd_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_mail"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="12dp"
            android:text="@string/user_type"
            android:textColor="#546E7A"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/rd_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_student"
            android:textColor="#616161"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rd_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_other"
            android:textColor="#757575"
            tools:ignore="TextContrastCheck"
            android:textSize="12sp"
            />
    </RadioGroup>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginTop="18dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="32dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rd_status"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/ed_retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_password"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/Confirm_password"
        android:drawablePadding="32dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/btn_register"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_retype_password"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/existingUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/existing_user"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>