<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyJournalsFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_upload_img"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guide_1"
        android:src="@drawable/ic_baseline_image_24"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="vertical"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/journey_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_1"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/item_title"
        android:textColorHint="#546E7A"
        android:textSize="14sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/journey_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_1"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/journey_title"
        android:textColorHint="#546E7A"
        android:hint="@string/journey_desc"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="12sp"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item_btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/journey_desc"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/new_journey"
        />

</androidx.constraintlayout.widget.ConstraintLayout>